Bug 121097 - UI: Incorrect behaviour in Date and Time dialog
Summary: UI: Incorrect behaviour in Date and Time dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-11-01 16:41 UTC by Xisco Faulí
Modified: 2018-11-05 11:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-11-01 16:41:07 UTC
Steps to reproduce:
1. Open attachment 145853 [details] from bug 120728
2. Reports - Right click on customer - Edit
3. Click on Page Header Orange box
4. Insert - Date and Number

- If both checkboxes are unchecked, format labels, format listboxes and OK button should be greyed out.
- If I select Include Date, time listbox is greyout

Reproduced in

Version: 6.2.0.0.alpha1+
Build ID: 4326fb3ef3ddd7c6f9d08ba96add4f4736503ceb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 1 Xisco Faulí 2018-11-01 16:42:22 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=4da8aef20416d0e1320a1ee455e2edc2ae61f9ac

author	Caolán McNamara <caolanm@redhat.com>	2018-05-21 12:05:55 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-05-21 18:33:31 +0200
commit 4da8aef20416d0e1320a1ee455e2edc2ae61f9ac (patch)
tree d0e9611c04d7dbc65ee904d6686c754ae224d105
parent 17ad73232ff604329e6532817570cb40342857e8 (diff)
weld ODateTimeDialog

Bisected with: bibisect-linux64-6.2

Adding Cc: to Caolán McNamara
Comment 2 Commit Notification 2018-11-01 21:13:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d611d5535b818854f9c6c6d4c144c2e5a9155a1a%5E%21

Resolves: tdf#121097 need an initial call to CBClickHdl

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2018-11-02 17:28:52 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: 5929d8ea469a971aa77371ed4b841c90a36e7da5
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Caolán, Thanks for fixing this!
Comment 4 Commit Notification 2018-11-05 11:48:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/502077fb9a9387a5aac85dabf445c10718309611%5E%21

Resolves: tdf#121097 need an initial call to CBClickHdl

It will be available in 6.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.