Resolves: tdf#121097 need an initial call to CBClickHdl

Change-Id: If075c6b555d6bca479d02c27bc6b4adb48b8550c